--- a/src/algo_pkg/CMakeLists.txt
+++ b/src/algo_pkg/CMakeLists.txt
@@ -160,7 +160,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  src/algo_phase_1.py src/dose_calculator.py
+  src/CostmapCoverageDosageExplorer.py src/dose_calculator.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
